--- a/frontend/src/globals.css
+++ b/frontend/src/globals.css
@@ -10,67 +10,133 @@ html,
 }
 
 @layer base {
-  :root {
-    --background: 4 3% 98%;
-    --foreground: 222.2 84% 4.9%;
+  :root  {
+  --background: 213 100% 95%;
+  --foreground: 213 5% 3%;
 
-    --card: 0 0% 99%;
-    --card-foreground: 222.2 84% 4.9%;
+  --card: 213 50% 90%;
+  --card-foreground: 213 5% 10%;
 
-    --popover: 0 0% 100%;
-    --popover-foreground: 222.2 84% 4.9%;
+  --popover: 213 100% 95%;
+  --popover-foreground: 213 100% 3%;
 
-    --primary: 222.2 47.4% 11.2%;
-    --primary-foreground: 210 40% 98%;
+  --primary: 213 88% 30%;
+  --primary-foreground: 0 0% 100%;
 
-    --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
+  --secondary: 213 30% 70%;
+  --secondary-foreground: 0 0% 0%;
 
-    --muted: 210 40% 96.1%;
-    --muted-foreground: 215.4 16.3% 46.9%;
+  --muted: 175 30% 85%;
+  --muted-foreground: 213 5% 35%;
 
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
+  --accent: 175 30% 80%;
+  --accent-foreground: 213 5% 10%;
 
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 210 40% 98%;
+  --destructive: 0 100% 30%;
+  --destructive-foreground: 213 5% 90%;
 
-    --border: 214.3 31.8% 91.4%;
-    --input: 214.3 31.8% 91.4%;
-    --ring: 222.2 84% 4.9%;
+  --border: 213 30% 50%;
+  --input: 213 30% 18%;
 
-    --radius: 0.5rem;
-  }
+  --ring: 213 88% 30%;
+  --radius: 0.75rem;
+}
 
-  .dark {
-    --background: 222.2 84% 4.9%;
-    --foreground: 210 40% 98%;
+.dark  {
+  --background: 213 50% 5%;
+  --foreground: 213 5% 90%;
 
-    --card: 222.2 84% 4.9%;
-    --card-foreground: 210 40% 98%;
+  --card: 213 50% 3%;
+  --card-foreground: 213 5% 90%;
 
-    --popover: 222.2 84% 4.9%;
-    --popover-foreground: 210 40% 98%;
+  --popover: 213 50% 5%;
+  --popover-foreground: 213 5% 90%;
 
-    --primary: 210 40% 98%;
-    --primary-foreground: 222.2 47.4% 11.2%;
+  --primary: 213 88% 30%;
+  --primary-foreground: 0 0% 100%;
 
-    --secondary: 217.2 32.6% 17.5%;
-    --secondary-foreground: 210 40% 98%;
+  --secondary: 213 30% 10%;
+  --secondary-foreground: 0 0% 100%;
 
-    --muted: 217.2 32.6% 17.5%;
-    --muted-foreground: 215 20.2% 65.1%;
+  --muted: 175 30% 15%;
+  --muted-foreground: 213 5% 60%;
 
-    --accent: 217.2 22.6% 13.5%;
-    --accent-foreground: 210 40% 98%;
+  --accent: 175 30% 15%;
+  --accent-foreground: 213 5% 90%;
 
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 210 40% 98%;
+  --destructive: 0 100% 30%;
+  --destructive-foreground: 213 5% 90%;
 
-    --border: 217.2 32.6% 17.5%;
-    --input: 217.2 32.6% 17.5%;
-    --ring: 212.7 26.8% 83.9%;
-  }
+  --border: 213 30% 18%;
+  --input: 213 30% 18%;
+
+  --ring: 213 88% 30%;
+  --radius: 0.75rem;
+}
+
+.deep-red {
+  --background: 0 100% 95%;
+  --foreground: 0 5% 10%;
+
+  --card: 0 50% 90%;
+  --card-foreground: 0 5% 15%;
+
+  --popover: 0 100% 95%;
+  --popover-foreground: 0 100% 10%;
+
+  --primary: 0 66% 41%;
+  --primary-foreground: 0 0% 100%;
+
+  --secondary: 0 30% 70%;
+  --secondary-foreground: 0 0% 0%;
+
+  --muted: -38 30% 85%;
+  --muted-foreground: 0 5% 35%;
+
+  --accent: -38 30% 80%;
+  --accent-foreground: 0 5% 15%;
+
+  --destructive: 0 100% 30%;
+  --destructive-foreground: 0 5% 90%;
+
+  --border: 0 30% 50%;
+  --input: 0 30% 26%;
+
+  --ring: 0 66% 41%;
+  --radius: 1rem;
+}
+
+.deep-red-dark  {
+  --background: 0 50% 10%;
+  --foreground: 0 5% 90%;
+
+  --card: 0 50% 10%;
+  --card-foreground: 0 5% 90%;
+
+  --popover: 0 50% 5%;
+  --popover-foreground: 0 5% 90%;
+
+  --primary: 0 66% 41%;
+  --primary-foreground: 0 0% 100%;
+
+  --secondary: 0 30% 20%;
+  --secondary-foreground: 0 0% 100%;
+
+  --muted: -38 30% 25%;
+  --muted-foreground: 0 5% 60%;
+
+  --accent: -38 30% 25%;
+  --accent-foreground: 0 5% 90%;
+
+  --destructive: 0 100% 30%;
+  --destructive-foreground: 0 5% 90%;
+
+  --border: 0 30% 26%;
+  --input: 0 30% 26%;
+
+  --ring: 0 66% 41%;
+  --radius: 1rem;
+}
 }
 
 @layer base {
