--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -9,133 +9,55 @@
     height: 100%;
     font-family: "DM Sans", sans-serif;
   }
+  
+
+@layer base {
   :root {
-    --background: 213 100% 95%;
-    --foreground: 213 5% 3%;
-
-    --card: 213 50% 90%;
-    --card-foreground: 213 5% 10%;
-
-    --popover: 213 100% 95%;
-    --popover-foreground: 213 100% 3%;
-
-    --primary: 213 88% 30%;
-    --primary-foreground: 0 0% 100%;
-
-    --secondary: 213 30% 70%;
-    --secondary-foreground: 0 0% 0%;
-
-    --muted: 175 30% 85%;
-    --muted-foreground: 213 5% 35%;
-
-    --accent: 175 30% 80%;
-    --accent-foreground: 213 5% 10%;
-
-    --destructive: 0 100% 30%;
-    --destructive-foreground: 213 5% 90%;
-
-    --border: 213 30% 50%;
-    --input: 213 30% 18%;
-
-    --ring: 213 88% 30%;
+    --background: 0 0% 100%;
+    --foreground: 0.0 0.0% 27.1%;
+    --card: 0.0 0.0% 96.1%;
+    --card-foreground: 240 10% 3.9%;
+    --popover: 0.0 0.0% 98.0%;
+    --popover-foreground: 0.0 0.0% 20.0%;
+    --primary: 0.0 0.0% 41.2%;
+    --primary-foreground: 0 0% 98%;
+    --secondary: 240 4.8% 95.9%;
+    --secondary-foreground: 0.0 0.0% 16.1%;
+    --muted: 0.0 0.0% 100.0%;
+    --muted-foreground: 240 3.8% 46.1%;
+    --accent: 240 4.8% 95.9%;
+    --accent-foreground: 0.0 0.0% 7.1%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 0 0% 98%;
+    --border: 0.0 0.0% 85.1%;
+    --input: 240 5.9% 90%;
+    --ring: 240 5.9% 10%;
     --radius: 1rem;
   }
-
+ 
   .dark {
-    --background: 213 50% 5%;
-    --foreground: 213 5% 90%;
-
-    --card: 213 25% 9%;
-    --card-foreground: 213 5% 90%;
-
-    --popover: 213 50% 5%;
-    --popover-foreground: 213 5% 90%;
-
-    --primary: 213 88% 30%;
-    --primary-foreground: 0 0% 100%;
-
-    --secondary: 213 30% 10%;
-    --secondary-foreground: 0 0% 100%;
-
-    --muted: 175 30% 15%;
-    --muted-foreground: 213 5% 60%;
-
-    --accent: 175 30% 15%;
-    --accent-foreground: 213 5% 90%;
-
-    --destructive: 0 100% 30%;
-    --destructive-foreground: 213 5% 90%;
-
-    --border: 213 10% 20%;
-    --input: 213 30% 18%;
-
-    --ring: 213 88% 30%;
-    --radius: 1rem;
+    --background: 0.0 0.0% 10.2%;
+    --foreground: 0 0% 98%;
+    --card: 0.0 0.0% 12.9%;
+    --card-foreground: 0 0% 98%;
+    --popover: 240 10% 3.9%;
+    --popover-foreground: 0 0% 98%;
+    --primary: 0 0% 98%;
+    --primary-foreground: 240 5.9% 10%;
+    --secondary: 240.0 4.7% 21.0%;
+    --secondary-foreground: 0 0% 98%;
+    --muted: 240 3.7% 15.9%;
+    --muted-foreground: 240 5% 64.9%;
+    --accent: 240 3.7% 15.9%;
+    --accent-foreground: 0 0% 98%;
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 0 0% 98%;
+    --border: 240 3.7% 15.9%;
+    --input: 240.0 3.9% 20.0%;
+    --ring: 240 4.9% 83.9%;
   }
+}
 
-  .deep-red {
-    --background: 0 100% 95%;
-    --foreground: 0 5% 10%;
-
-    --card: 0 50% 90%;
-    --card-foreground: 0 5% 15%;
-
-    --popover: 0 100% 95%;
-    --popover-foreground: 0 100% 10%;
-
-    --primary: 0 66% 41%;
-    --primary-foreground: 0 0% 100%;
-
-    --secondary: 0 30% 70%;
-    --secondary-foreground: 0 0% 0%;
-
-    --muted: -38 30% 85%;
-    --muted-foreground: 0 5% 35%;
-
-    --accent: -38 30% 80%;
-    --accent-foreground: 0 5% 15%;
-
-    --destructive: 0 100% 30%;
-    --destructive-foreground: 0 5% 90%;
-
-    --border: 0 30% 50%;
-    --input: 0 30% 26%;
-
-    --ring: 0 66% 41%;
-    --radius: 1rem;
-  }
-
-  .deep-red-dark {
-    --background: 0 50% 10%;
-    --foreground: 0 5% 90%;
-
-    --card: 0 50% 10%;
-    --card-foreground: 0 5% 90%;
-
-    --popover: 0 50% 5%;
-    --popover-foreground: 0 5% 90%;
-
-    --primary: 0 66% 41%;
-    --primary-foreground: 0 0% 100%;
-
-    --secondary: 0 30% 20%;
-    --secondary-foreground: 0 0% 100%;
-
-    --muted: -38 30% 25%;
-    --muted-foreground: 0 5% 60%;
-
-    --accent: -38 30% 25%;
-    --accent-foreground: 0 5% 90%;
-
-    --destructive: 0 100% 30%;
-    --destructive-foreground: 0 5% 90%;
-
-    --border: 0 30% 26%;
-    --input: 0 30% 26%;
-
-    --ring: 0 66% 41%;
-    --radius: 1rem;
-  }
 }
 
 @layer base {
