--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -6,7 +6,7 @@
   body,
   html,
   :root {
-    height: 100%;
+    height: 100dvh;
     font-family: "DM Sans", sans-serif;
   }
 
@@ -64,6 +64,17 @@
     @apply border-border;
   }
   body {
-    @apply flex h-dvh flex-col bg-background text-foreground;
+    @apply flex flex-col bg-background text-foreground;
   }
+}
+
+/* Hide scrollbar for WebKit browsers */
+.scroll {
+  overflow-y: scroll;
+}
+
+.scroll::-webkit-scrollbar {
+  display: none;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
